framec/tests/snapshots/rust_snapshots__linear_fsm.snap
---
source: framec/tests/rust_snapshots.rs
expression: "compile_fixture(\"01_linear_fsm\", \"rust\")"
---
#[allow(dead_code)]
#[allow(non_camel_case_types)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unused_mut)]
#[allow(unused_imports)]
#[allow(clippy::assign_op_pattern)]
#[allow(clippy::clone_on_copy)]
#[allow(clippy::derivable_impls)]
#[allow(clippy::match_single_binding)]
#[allow(clippy::needless_return)]
#[allow(clippy::new_without_default)]
#[allow(clippy::single_match)]
mod _linear_fsm_framec {
    use super::*;
    extern crate alloc;
    use alloc::{vec, format};
    #[derive(Clone, Debug)]
    #[allow(dead_code, non_camel_case_types)]
    enum LinearFsmFrameEvent {
        Start {  },
        Progress { amount: i32 },
        Finish {  },
        FrameEnter { args: Vec<alloc::rc::Rc<dyn core::any::Any>> },
        FrameExit { args: Vec<alloc::rc::Rc<dyn core::any::Any>> },
    }

    #[derive(Clone)]
    #[allow(dead_code, non_camel_case_types)]
    enum LinearFsmFrameReturn {
        _Lifecycle(alloc::rc::Rc<dyn core::any::Any>),
    }

    #[allow(dead_code)]
    impl LinearFsmFrameEvent {
        fn name(&self) -> &'static str {
            match self {
                LinearFsmFrameEvent::Start { .. } => "start",
                LinearFsmFrameEvent::Progress { .. } => "progress",
                LinearFsmFrameEvent::Finish { .. } => "finish",
                LinearFsmFrameEvent::FrameEnter { .. } => "$>",
                LinearFsmFrameEvent::FrameExit { .. } => "<$",
            }
        }
    }

    #[derive(Clone, Debug)]
    #[allow(dead_code, non_camel_case_types)]
    enum LinearFsmFrameValue {
        Int(i64),
        Float(f64),
        Bool(bool),
        Str(String),
        List(Vec<Self>),
        Dict(alloc::collections::BTreeMap<String, Self>),
    }

    #[allow(dead_code, non_camel_case_types)]
    struct LinearFsmFrameContext {
        event: alloc::rc::Rc<LinearFsmFrameEvent>,
        _return: Option<LinearFsmFrameReturn>,
        _data: alloc::collections::BTreeMap<String, LinearFsmFrameValue>,
        _transitioned: bool,
    }

    impl LinearFsmFrameContext {
        fn new(event: alloc::rc::Rc<LinearFsmFrameEvent>, default_return: Option<LinearFsmFrameReturn>) -> Self {
            Self {
                event,
                _return: default_return,
                _data: alloc::collections::BTreeMap::new(),
                _transitioned: false,
            }
        }
    }

    #[allow(dead_code, non_camel_case_types)]
    #[derive(Clone)]
    enum LinearFsmStateContext {
        Idle,
        Active,
        Done,
        Empty,
    }

    impl Default for LinearFsmStateContext {
        fn default() -> Self {
            LinearFsmStateContext::Idle
        }
    }

    #[allow(dead_code, non_camel_case_types)]
    #[derive(Clone)]
    struct LinearFsmCompartment {
        state: String,
        state_context: LinearFsmStateContext,
        enter_args: Vec<alloc::rc::Rc<dyn core::any::Any>>,
        exit_args: Vec<alloc::rc::Rc<dyn core::any::Any>>,
        forward_event: Option<LinearFsmFrameEvent>,
        parent_compartment: Option<Box<LinearFsmCompartment>>,
    }

    impl LinearFsmCompartment {
        fn new(state: &str) -> Self {
            let state_context = match state {
                "Idle" => LinearFsmStateContext::Idle,
                "Active" => LinearFsmStateContext::Active,
                "Done" => LinearFsmStateContext::Done,
                _ => LinearFsmStateContext::Empty,
            };
            Self {
                state: state.to_string(),
                state_context,
                enter_args: Vec::new(),
                exit_args: Vec::new(),
                forward_event: None,
                parent_compartment: None,
            }
        }
    }

    #[allow(dead_code)]
    pub struct LinearFsm {
        _state_stack: Vec<LinearFsmCompartment>,
        __compartment: LinearFsmCompartment,
        __next_compartment: Option<LinearFsmCompartment>,
        _context_stack: Vec<LinearFsmFrameContext>,
        pub total: i32,
    }

    #[allow(non_snake_case)]
    impl LinearFsm {
        pub fn new() -> Self {
            Self {
                _state_stack: Vec::new(),
                _context_stack: Vec::new(),
                total: 0,
                __compartment: LinearFsmCompartment::new("Idle"),
                __next_compartment: None,
            }
        }

        pub fn __create() -> Self {
            let mut c = Self::new();
            c.__compartment = c.__prepareEnter("Idle", vec![]);
            let __e = alloc::rc::Rc::new(LinearFsmFrameEvent::FrameEnter { args: c.__compartment.enter_args.clone() });
            let __ctx = LinearFsmFrameContext::new(alloc::rc::Rc::clone(&__e), None);
            c._context_stack.push(__ctx);
            c.__kernel(&__e);
            c._context_stack.pop();
            c
        }

        fn __hsm_chain(&mut self, leaf: &str) -> &'static [&'static str] {
            match leaf {
                "Idle" => &["Idle"],
                "Active" => &["Active"],
                "Done" => &["Done"],
                _ => &[],
            }
        }

        fn __prepareEnter(&mut self, leaf: &str, enter_args: Vec<alloc::rc::Rc<dyn core::any::Any>>) -> LinearFsmCompartment {
            let chain = self.__hsm_chain(leaf);
            let mut comp: Option<LinearFsmCompartment> = None;
            for name in chain.iter() {
                let mut new_comp = LinearFsmCompartment::new(name);
                new_comp.enter_args = enter_args.clone();
                if let Some(parent) = comp.take() {
                    new_comp.parent_compartment = Some(Box::new(parent));
                }
                comp = Some(new_comp);
            }
            comp.expect("chain must contain at least the leaf state")
        }

        fn __prepareExit(&mut self, exit_args: Vec<alloc::rc::Rc<dyn core::any::Any>>) {
            self.__compartment.exit_args = exit_args.clone();
            let mut cursor = self.__compartment.parent_compartment.as_deref_mut();
            while let Some(c) = cursor {
                c.exit_args = exit_args.clone();
                cursor = c.parent_compartment.as_deref_mut();
            }
        }

        fn __kernel(&mut self, __e: &alloc::rc::Rc<LinearFsmFrameEvent>) {
            // Route event to current state.
            self.__router(__e);
            // Drain any transitions queued by the handler.
            while self.__next_compartment.is_some() {
                let next_compartment = self.__next_compartment.take().expect("invariant: while-loop guard checked is_some()");
                // Exit the current (leaf) state.
                let exit_args = self.__compartment.exit_args.clone();
                let exit_event = alloc::rc::Rc::new(LinearFsmFrameEvent::FrameExit { args: exit_args });
                self.__router(&exit_event);
                // Switch to the new compartment.
                self.__compartment = next_compartment;
                // Three-branch forward-event handling (RFC-0025 Track B.1: forward
                // event is matched on enum variant; $> recognition is now a
                // structural match, not a string compare).
                match self.__compartment.forward_event.take() {
                    None => {
                        // No forwarded event — synthesize a fresh $>.
                        let enter_args = self.__compartment.enter_args.clone();
                        let enter_event = alloc::rc::Rc::new(LinearFsmFrameEvent::FrameEnter { args: enter_args });
                        self.__router(&enter_event);
                    }
                    Some(fwd) if matches!(fwd, LinearFsmFrameEvent::FrameEnter { .. }) => {
                        // Forwarded event IS $> — dispatch directly so the
                        // destination's $> handler receives the caller's payload.
                        let fwd_rc = alloc::rc::Rc::new(fwd);
                        self.__router(&fwd_rc);
                    }
                    Some(fwd) => {
                        // Forwarded event is not $> — initialize the destination
                        // with a fresh $>, then dispatch the forward.
                        let enter_args = self.__compartment.enter_args.clone();
                        let enter_event = alloc::rc::Rc::new(LinearFsmFrameEvent::FrameEnter { args: enter_args });
                        self.__router(&enter_event);
                        let fwd_rc = alloc::rc::Rc::new(fwd);
                        self.__router(&fwd_rc);
                    }
                }
                for ctx in self._context_stack.iter_mut() {
                    ctx._transitioned = true;
                }
            }
        }

        fn __router(&mut self, __e: &alloc::rc::Rc<LinearFsmFrameEvent>) {
            let __ev: &LinearFsmFrameEvent = __e;
            match self.__compartment.state.as_str() {
                "Idle" => self._state_Idle(__ev),
                "Active" => self._state_Active(__ev),
                "Done" => self._state_Done(__ev),
                _ => {}
            }
        }

        fn __transition(&mut self, next_compartment: LinearFsmCompartment) {
            self.__next_compartment = Some(next_compartment);
        }

        pub fn start(&mut self) {
            let __e = alloc::rc::Rc::new(LinearFsmFrameEvent::Start {});
            let mut __ctx = LinearFsmFrameContext::new(alloc::rc::Rc::clone(&__e), None);
            self._context_stack.push(__ctx);
            self.__kernel(&__e);
            self._context_stack.pop();
        }

        pub fn progress(&mut self, amount: i32) {
            let __e = alloc::rc::Rc::new(LinearFsmFrameEvent::Progress { amount: amount.clone() });
            let mut __ctx = LinearFsmFrameContext::new(alloc::rc::Rc::clone(&__e), None);
            self._context_stack.push(__ctx);
            self.__kernel(&__e);
            self._context_stack.pop();
        }

        pub fn finish(&mut self) {
            let __e = alloc::rc::Rc::new(LinearFsmFrameEvent::Finish {});
            let mut __ctx = LinearFsmFrameContext::new(alloc::rc::Rc::clone(&__e), None);
            self._context_stack.push(__ctx);
            self.__kernel(&__e);
            self._context_stack.pop();
        }

        fn _state_Idle(&mut self, __e: &LinearFsmFrameEvent) {
            match __e {
                LinearFsmFrameEvent::Start { .. } => { self._s_Idle_hdl_user_start(__e); }
                _ => {}
            }
        }

        fn _state_Active(&mut self, __e: &LinearFsmFrameEvent) {
            match __e {
                LinearFsmFrameEvent::Finish { .. } => { self._s_Active_hdl_user_finish(__e); }
                LinearFsmFrameEvent::Progress { amount, .. } => {
                    self._s_Active_hdl_user_progress(__e, *amount);
                }
                _ => {}
            }
        }

        fn _state_Done(&mut self, __e: &LinearFsmFrameEvent) {
            match __e {
                _ => {}
            }
        }

        fn _s_Idle_hdl_user_start(&mut self, __e: &LinearFsmFrameEvent) {
            let mut __compartment = self.__prepareEnter("Active", vec![]);
            self.__transition(__compartment);
            return;
        }

        fn _s_Active_hdl_user_finish(&mut self, __e: &LinearFsmFrameEvent) {
            let mut __compartment = self.__prepareEnter("Done", vec![]);
            self.__transition(__compartment);
            return;
        }

        fn _s_Active_hdl_user_progress(&mut self, __e: &LinearFsmFrameEvent, amount: i32) {
            self.total = self.total + amount;
        }
    }
}
pub use _linear_fsm_framec::*;
